force-app/main/default/objects/MatchingCriteria__mdt/MatchingCriteria__mdt.object-meta.xml
<CustomObject>
    <description>Defines criteria settings for matching records</description>
    <label>MatchingCriteria</label>
    <pluralLabel>MatchingCriteria</pluralLabel>
</CustomObject>