force-app/main/default/objects/MatchingCriteria__mdt/fields/Field_One__c.field-meta.xml
<CustomField>
    <fullName>Field_One__c</fullName>
    <description>Field of the record that is to be compared</description>
    <label>Field One</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>