force-app/main/default/objects/MatchingCriteria__mdt/fields/Field_Two__c.field-meta.xml
<CustomField>
    <fullName>Field_Two__c</fullName>
    <description>Field of the record we are comparing to</description>
    <label>Field Two</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>