force-app/main/default/objects/MatchingCriteria__mdt/fields/Matching_Object__c.field-meta.xml
<CustomField>
    <fullName>Matching_Object__c</fullName>
    <description>The Object to find the match from</description>
    <label>Matching Object</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>