force-app/main/default/objects/MatchingCriteria__mdt/fields/Partial_Field_One_Start__c.field-meta.xml
<CustomField>
    <fullName>Partial_Field_One_Start__c</fullName>
    <description>The start text where matching should end for the field to be compared. Used for partial matching</description>
    <label>Partial Field One Start</label>
    <length>255</length>
    <type>Text</type>
</CustomField>