force-app/main/default/objects/MatchingCriteria__mdt/fields/Partial_Field_Two_End__c.field-meta.xml
<CustomField>
    <fullName>Partial_Field_Two_End__c</fullName>
    <description>The end text where matching should end for the field we are comparing to. Used for partial matching</description>
    <label>Partial Field Two End</label>
    <length>255</length>
    <type>Text</type>
</CustomField>